# DL-Cloud

./: main.py  pyproject.toml
cw1/: Cwiczenia_1_merge.ipynb  Ćw1_Zadania.ipynb  Ćw1_podstawy_pytorch(2026).ipynb
cw2/: Estymacja parametruGD.xlsx  Ćw2_RL_różne_podejścia.ipynb  Ćw2_pytorch_workflow(RL)(2026).ipynb
